--- a/SubjectListService/src/main/resources/application.properties
+++ b/SubjectListService/src/main/resources/application.properties
@@ -1,6 +1,3 @@
 spring.jackson.serialization.fail-on-empty-beans=false
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
-spring.datasource.username=root
-spring.datasource.password=
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
