--- a/VideoListService/src/main/resources/application.properties
+++ b/VideoListService/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.4.56.29:3306/db59075
-spring.datasource.username=db59075
-spring.datasource.password=db59075
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
