--- a/SubjectListService/.gitignore
+++ b/SubjectListService/.gitignore
@@ -23,3 +23,17 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+### REACT NEXTJS ####
+/nextjs/node_modules
+/nextjs/public/hot
+/nextjs/public/storage
+/nextjs/storage/*.key
+/nextjs/vendor
+/nextjs/.idea
+/nextjs/.vagrant
+/nextjs/Homestead.json
+/nextjs/Homestead.yaml
+/nextjs/npm-debug.log
+/nextjs/yarn-error.log
+/nextjs/.env
