--- a/SubjectListService/src/main/resources/application.properties
+++ b/SubjectListService/src/main/resources/application.properties
@@ -1,2 +1,20 @@
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+spring.application.name=subject-service
+
+eureka.client.serviceUrl.defaultZone:${EUREKA_URL:http://localhost:8888/eureka}
+eureka.instance.hostname=${vcap.application.uris[0]:localhost}
+eureka.instance.home-page-url=http://${eureka.instance.hostname}/
+eureka.instance.status-page-url=http://${eureka.instance.hostname}/actuator/info
+eureka.instance.health-check-url==http://${eureka.instance.hostname}/actuator/health
+eureka.instance.non-secure-port-enabled=true
+eureka.instance.non-secure-port=80
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=5
+management.endpoints.web.exposure.include=*
+server.port=80
+eureka.client.eureka-server-port=80
+eureka.client.proxy-port=80
+info.app.contact=Facebook Nan Nun Nuan
+info.app.detail=This is DreamTeam ${spring.application.name} 
