--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -4,9 +4,10 @@
     "axios": "^0.18.0",
     "next": "^6.0.2",
     "nextjs": "^0.0.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-player": "^1.6.6",
+    "reactstrap": "^6.5.0",
     "styled-components": "^4.0.2"
   },
   "scripts": {
