--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
+    "firebase-tools": "^6.0.1",
     "next": "^6.0.2",
     "nextjs": "^0.0.3",
     "react": "^16.6.1",
