--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "aos": "^2.3.4",
     "axios": "^0.18.0",
     "next": "^6.0.2",
     "nextjs": "^0.0.3",
@@ -21,5 +22,5 @@
   "engines": {
     "node": "4.2.4",
     "npm": "3.10.10"
- }
+  }
 }
