--- a/backend/UserService/src/main/resources/application.properties
+++ b/backend/UserService/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
+
+token.secret=dreamteamsecret
+token.maxAgeSeconds=86400
