--- a/backend/UserService/src/main/resources/application.properties
+++ b/backend/UserService/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 
-token.secret=dreamteamsecret
+token.secret=${DREAMTEAM_SECRET}
 token.maxAgeSeconds=86400
