--- a/backend/SubjectService/src/main/resources/application.properties
+++ b/backend/SubjectService/src/main/resources/application.properties
@@ -1,2 +1,12 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${ENV_DATABASE_URL}
+spring.datasource.username=${ENV_DATABASE_USERNAME}
+spring.datasource.password=${ENV_DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
+server.port=8081
 token.secret=${DREAMTEAM_SECRET}
 token.maxAgeSeconds=86400
