--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -4,6 +4,7 @@
     "aos": "^2.3.4",
     "axios": "^0.18.0",
     "firebase-tools": "^6.0.1",
+    "local-storage": "^1.4.2",
     "next": "^6.0.2",
     "nextjs": "^0.0.3",
     "react": "^16.6.1",
