[UPDATE] endpointUrl env

--- a/backend/MaterialService/src/main/resources/application.properties
+++ b/backend/MaterialService/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 token.secret=${DREAMTEAM_SECRET}
 token.maxAgeSeconds=86400
 
-amazon.endpointUrl: https://s3.us-east-2.amazonaws.com
+amazon.endpointUrl: ${AMAZON_ENDPOINTURL}
 amazon.bucketName: ${AMAZON_BUCKET}
 amazon.accessKey: ${AMAZON_ACCESSKEY}
 amazon.secretKey: ${AMAZON_SECRETKEY}
