[UPDATE] Material can upload listFiles download delete to aws s3 directly

--- a/backend/MaterialService/src/main/resources/application.properties
+++ b/backend/MaterialService/src/main/resources/application.properties
@@ -12,16 +12,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 token.secret=${DREAMTEAM_SECRET}
 token.maxAgeSeconds=86400
 
-<<<<<<< HEAD
 amazon.endpointUrl= ${AMAZON_ENDPOINTURL}
 amazon.bucketName= ${AMAZON_BUCKET}
 amazon.accessKey= ${AMAZON_ACCESSKEY}
 amazon.secretKey= ${AMAZON_SECRETKEY}
 amazon.regions= ${AMAZON_REGION}
-=======
-amazon.endpointUrl: ${AMAZON_ENDPOINTURL}
-amazon.bucketName: ${AMAZON_BUCKET}
-amazon.accessKey: ${AMAZON_ACCESSKEY}
-amazon.secretKey: ${AMAZON_SECRETKEY}
-amazon.regions: ${AMAZON_REGION}
->>>>>>> 158f62d29d5e5f1f4c04ce0a15f9923301e351fd
+
+spring.servlet.multipart.max-file-size=200
+spring.servlet.multipart.max-request-size=200
