--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -15,7 +15,7 @@
     "styled-components": "^3.4.10"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3001",
     "superultimatedeploy": "next build && cp manifest.yml out && cd out && ibmcloud cf push",
     "start": "next start",
     "build": "next build",
