ีupdate bring out 'diskSpace' from HealthCheck

--- a/backend/HealthCheckService/src/main/resources/application.properties
+++ b/backend/HealthCheckService/src/main/resources/application.properties
@@ -4,5 +4,4 @@ info.app.description=E-learning of your dreams @SIT, KMUTT
 management.endpoints.web.exposure.include=info, health
 management.endpoint.health.show-details=always
 
-
-
+management.health.diskspace.enabled=false
